# EigenMarkovDiffusion

./: .gitignore  EigenDiffusion_v0.9.0_persistent_completion.patch  PROJECT_SUMMARY.md  README.md  REFACTOR_NOTES.md  adaptive_handoff.patch  pyproject.toml  v0.7.1_compare_readouts_completion_args.patch
docs/: ADAPTIVE_HANDOFF.md  ANALYSIS_UPDATE.md  DELTA_SIGMA_READOUTS.md  IMPLEMENTATION_UPDATE.md  MATH.md  MODAL_MODELS.md  PERFORMANCE_BENCHMARKS.md  PERSISTENT_UNRESOLVED_COMPLETION.md  PROJECT_STATUS.md  PROJECT_SUMMARY.md  REFACTOR_NOTES.md  TEMPORAL_CORRELATION_DIAGNOSTICS.md  UNRESOLVED_GAUSSIAN_COMPLETION.md
examples/: basic_api.py  benchmark_random_walks.py  compare_modal_models.py  compare_readouts.py  quick_validation.py
src/eigendiffusion/: __init__.py  baselines.py  benchmarking.py  cli.py  completion.py  config.py  correlated_modal.py  eigenmarkov.py  ensemble.py  metrics.py  operators.py  plotting.py  readouts.py  references.py  temporal.py
src/eigendiffusion.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_baselines.py  test_benchmarking.py  test_cli_handoff.py  test_cli_models.py  test_cli_readouts.py  test_cli_temporal.py  test_completion.py  test_correlated_modal.py  test_eigenmarkov.py  test_expected_update.py  test_handoff_correlated_modal.py  test_metrics.py  test_model_benchmarking.py  test_operators.py  test_persistent_completion.py  test_readouts.py  test_references.py  test_temporal.py
