[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "eigendiffusion"
version = "0.9.0"
description = "Stochastic diffusion using Markov dynamics in a Laplacian eigenbasis"
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "Margot Wagner"}]
dependencies = [
  "numpy>=1.24",
  "matplotlib>=3.7",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
  "ruff>=0.5",
]

[project.scripts]
eigendiffusion = "eigendiffusion.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py310"
